--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BobaCat</title>
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <link rel="stylesheet" type="text/css" href="https://bobacat.dev/css">
+    <link rel="stylesheet" type="text/css" href="https://bobacat.dev/styles.css">
     <script src="script.js"></script>
 </head>
 
