--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </nav>
   </header>
   <main>
-    <h2>About Bobacat</h2>
-    <p>Bobacat is a software and game production studio based in Eau Claire, Wisconsin with the goal of creating quality products that improve people's lives; whether from increased productivity or joy.</p>
+    <h2>Contact Us</h2>
+    <p>Please email <a href="mailto:contact@bobacat.dev">contact@bobacat.dev</a> for any inquiries.</p>
     
   </main>
   <footer>
