update contact info

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   </header>
   <main>
     <h2>Contact Us</h2>
-    
-  </main>
+        <p style="display:inline">For inquiries please email</p> <a href="mailto:contact@bobacat.com">contact@bobacat.dev</a>  </main>
   <footer>
     <p>© 2025 BobaCat. Proudly built without AI</p>
   </footer>
