--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         <a href="https://contact.bobacat.dev/">Contact</a>
     </nav>
   </header>
-  <main>
+    <main>
     <h2>Contact Us</h2>
-        <p style="display:inline">For inquiries please email</p> <a href="mailto:contact@bobacat.com">contact@bobacat.dev</a>  </main>
+        <p style="display:inline">For inquiries please email</p> <a href="mailto:contact@bobacat.dev">contact@bobacat.dev</a> 
+        <a href="mailto:test@test.com">test@test.com</a>
+
+    </main>
   <footer>
     <p>© 2025 BobaCat. Proudly built without AI</p>
   </footer>
