--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   </header>
     <main>
     <h2>Contact Us</h2>
-        <p style="display:inline">For inquiries please email</p> <a href="mailto:contact@bobacat.dev">contact@bobacat.dev</a> 
-        <a href="mailto:test@test.com">test@test.com</a>
+        <p style="display:inline">Please email</p> <a href="mailto:contact@bobacat.dev">contact@bobacat.dev</a> <p style="display:inline"> for any inquiries</p>
 
     </main>
   <footer>
