--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
   <header>
-    <h1>BobaCat</h1>
     <nav>
-        <a href="https://www.bobacat.dev/">Home</a>
-        <a href="https://games.bobacat.dev/">Games</a>
-        <a href="https://software.bobacat.dev/">Software</a>
-        <a href="https://contact.bobacat.dev/">Contact</a>
+      <img src="https://www.bobacat.dev/logo_plain_text.png" alt="Bobacat logo" style="width:125px;height:125px;">
+      <a href="https://www.bobacat.dev/">Home</a>
+      <a href="https://games.bobacat.dev/">Games</a>
+      <a href="https://software.bobacat.dev/">Software</a>
+      <a href="https://contact.bobacat.dev/">Contact</a>
     </nav>
   </header>
     <main>
