--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </main>
   <footer>
-    <p>© 2025 BobaCat. Proudly built without AI</p>
+    <p>© 2025 Bobacat. Proudly built without AI</p>
   </footer>
 </body>
 </html>
