--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BobaCat</title>
+    <title>Bobacat</title>
     <link rel="icon" type="image/x-icon" href="icon.png">
     <link rel="stylesheet" type="text/css" href="https://bobacat.dev/styles.css">
     <script src="script.js"></script>
 </head>
-
 <body>
   <header>
     <nav>
-      <img src="https://www.bobacat.dev/logo_plain_text.png" alt="Bobacat logo" style="width:125px;height:125px;">
-      <a href="https://www.bobacat.dev/">Home</a>
-      <a href="https://games.bobacat.dev/">Games</a>
-      <a href="https://software.bobacat.dev/">Software</a>
-      <a href="https://contact.bobacat.dev/">Contact</a>
+      <div class="navbar">
+        <img align="bottom" src="https://www.bobacat.dev/logo_plain_text.png" alt="Bobacat logo" style="width:125px;height:125px;">
+        <a href="https://www.bobacat.dev/">Home</a>
+        <a href="https://games.bobacat.dev/">Games</a>
+        <a href="https://software.bobacat.dev/">Software</a>
+        <a href="https://contact.bobacat.dev/">Contact</a>
+      </div>
     </nav>
   </header>
     <main>
