--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <div class="navbar">
         <a href="https://www.bobacat.dev/">Home</a>
         <a href="https://games.bobacat.dev/">Games</a>
-        <img align="bottom" src="https://www.bobacat.dev/logo_plain_text.png" alt="Bobacat logo" style="width:125px;height:125px;">
-        <a href="https://software.bobacat.dev/">Software</a>
+        <a href="https://www.bobacat.dev/">
+          <img src="logo_plain_text.png" alt="Bobacat logo" style="width:125px;height:125px;">
+        </a>         <a href="https://software.bobacat.dev/">Software</a>
         <a href="https://contact.bobacat.dev/">Contact</a>
       </div>
     </nav>
