--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <a href="https://games.bobacat.dev/">Games</a>
         <a href="https://www.bobacat.dev/">
           <img src="https://www.bobacat.dev/logo_plain_text.png" alt="Bobacat logo" style="width:125px;height:125px;">
-        </a>         <a href="https://software.bobacat.dev/">Software</a>
+        </a>         
+        <a href="https://software.bobacat.dev/">Software</a>
         <a href="https://contact.bobacat.dev/">Contact</a>
       </div>
     </nav>
